mtdrworkshop/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mtdrworkshop
  name: todo-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/todolist"
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontendapp-service
            port:
              number: 80
